updating code structure

--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,7 @@
 		"accelerators",
 		"dsx",
 		"folder template",
-		"folder structure",
-		"frontend"
+		"folder structure"
 	],
 	"license": "MIT",
 	"repository": {
