--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
 	"dependencies": {
 		"dotenv": "^16.0.1",
 		"dsx-core": "^0.0.11",
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"nodemailer": "^6.7.8"
 	},
 	"scripts": {
 		"start": "pm2-runtime start main.js --watch"
